--- a/client/src/css/app.scss
+++ b/client/src/css/app.scss
@@ -7,6 +7,8 @@
 @import "pages/register";
 @import "pages/sale";
 @import "pages/shopall";
+@import "pages/dashboard";
+@import "pages/create";
 
 *, *:before, *:after {
     margin: 0;
